Can now play multiple rounds on Hot Seat

--- a/public/sass/game.scss
+++ b/public/sass/game.scss
@@ -88,7 +88,7 @@ h1 {
     background: transparent;
 }
 
-h2 {
+h2, #yes, #no {
     color: inherit;
     font-size: $noticefntsize;
     @include vertical-flexbox;
