--- a/public/sass/helpers/_functions.scss
+++ b/public/sass/helpers/_functions.scss
@@ -75,7 +75,9 @@
         $bordercolor: transparentize($dark-green, 0.2);
         border: 5px solid $bordercolor;
     } @else {
-        border: 5px solid $color;
+        border: none;
     }
     box-shadow: 0px 0px 2px $black;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
