--- a/public/style/game.css
+++ b/public/style/game.css
@@ -88,6 +88,8 @@ h1 {
   align-items: center;
   align-content: space-around;
   flex-wrap: wrap;
+  -webkit-align-content: center;
+  align-content: center;
   background: transparent; }
 
 h2 {
@@ -114,8 +116,42 @@ h2 {
   max-height: 80%;
   min-height: 80%;
   padding: 0 2em;
+  margin: auto 1em;
   border-radius: 10px;
   box-shadow: 2px 2px 5px #555555; }
+
+#yes, #no {
+  color: inherit;
+  font-size: 4.2vh;
+  width: auto;
+  max-width: auto;
+  min-width: auto;
+  height: 80%;
+  max-height: 80%;
+  min-height: 80%;
+  padding: 0 2em;
+  margin: auto 1em;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px #555555; }
+
+.notVisible {
+  display: none; }
+
+.visible {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap; }
 
 #game {
   display: -webkit-flex;
@@ -356,7 +392,9 @@ a.info:active {
   min-height: 75%;
   border-radius: 50%;
   border: 5px solid rgba(18, 85, 33, 0.8);
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .WBRN {
   background-color: rgba(255, 255, 255, 0.6);
@@ -368,7 +406,9 @@ a.info:active {
   min-height: 75%;
   border-radius: 50%;
   border: none;
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .WBQO {
   background-color: rgba(255, 255, 255, 0.6);
@@ -380,7 +420,9 @@ a.info:active {
   min-height: 75%;
   border-radius: none;
   border: 5px solid rgba(18, 85, 33, 0.8);
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .WBQN {
   background-color: rgba(255, 255, 255, 0.6);
@@ -392,7 +434,9 @@ a.info:active {
   min-height: 75%;
   border-radius: none;
   border: none;
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .WSRO {
   background-color: rgba(255, 255, 255, 0.6);
@@ -404,7 +448,9 @@ a.info:active {
   min-height: 50%;
   border-radius: 50%;
   border: 5px solid rgba(18, 85, 33, 0.8);
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .WSRN {
   background-color: rgba(255, 255, 255, 0.6);
@@ -416,7 +462,9 @@ a.info:active {
   min-height: 50%;
   border-radius: 50%;
   border: none;
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .WSQO {
   background-color: rgba(255, 255, 255, 0.6);
@@ -428,7 +476,9 @@ a.info:active {
   min-height: 50%;
   border-radius: none;
   border: 5px solid rgba(18, 85, 33, 0.8);
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .WSQN {
   background-color: rgba(255, 255, 255, 0.6);
@@ -440,7 +490,9 @@ a.info:active {
   min-height: 50%;
   border-radius: none;
   border: none;
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .GBRO {
   background-color: rgba(33, 204, 67, 0.6);
@@ -452,7 +504,9 @@ a.info:active {
   min-height: 75%;
   border-radius: 50%;
   border: 5px solid rgba(18, 85, 33, 0.8);
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .GBRN {
   background-color: rgba(33, 204, 67, 0.6);
@@ -464,7 +518,9 @@ a.info:active {
   min-height: 75%;
   border-radius: 50%;
   border: none;
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .GBQO {
   background-color: rgba(33, 204, 67, 0.6);
@@ -476,7 +532,9 @@ a.info:active {
   min-height: 75%;
   border-radius: none;
   border: 5px solid rgba(18, 85, 33, 0.8);
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .GBQN {
   background-color: rgba(33, 204, 67, 0.6);
@@ -488,7 +546,9 @@ a.info:active {
   min-height: 75%;
   border-radius: none;
   border: none;
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .GSRO {
   background-color: rgba(33, 204, 67, 0.6);
@@ -500,7 +560,9 @@ a.info:active {
   min-height: 50%;
   border-radius: 50%;
   border: 5px solid rgba(18, 85, 33, 0.8);
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .GSRN {
   background-color: rgba(33, 204, 67, 0.6);
@@ -512,7 +574,9 @@ a.info:active {
   min-height: 50%;
   border-radius: 50%;
   border: none;
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .GSQO {
   background-color: rgba(33, 204, 67, 0.6);
@@ -524,7 +588,9 @@ a.info:active {
   min-height: 50%;
   border-radius: none;
   border: 5px solid rgba(18, 85, 33, 0.8);
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .GSQN {
   background-color: rgba(33, 204, 67, 0.6);
@@ -536,7 +602,9 @@ a.info:active {
   min-height: 50%;
   border-radius: none;
   border: none;
-  box-shadow: 0px 0px 2px #111111; }
+  box-shadow: 0px 0px 2px #111111;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .selected, .selected:hover, .selected:active {
   background-color: rgba(18, 85, 33, 0.6);
